# libBasexCpp

./: Build.sh  README  README.md
CMake/BasexCpp/: CMakeLists.txt  CMakePresets.json  Mainpage.md
CMake/BasexCpp/Docs/html/: Base_8h_source.html  BasexClient_8h_source.html  BasexCpp_8h_source.html  BasexSocket_8h_source.html  ClientUtils_8h_source.html  QueryObject_8h_source.html  ResponseObj_8h_source.html  annotated.html  classBasexCpp_1_1Base-members.html  classBasexCpp_1_1Base.html  classBasexCpp_1_1BasexClient-members.html  classBasexCpp_1_1BasexClient.html  classBasexCpp_1_1QueryObject-members.html  classBasexCpp_1_1QueryObject.html  classBasexCpp_1_1ResponseObj-members.html  classBasexCpp_1_1ResponseObj.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_a944619db1a0b3355195f3bfcfc43ef0.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  export_8h_source.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html
CMake/BasexCpp/Docs/html/search/: all_1.js  all_6.js  classes_0.js  classes_1.js  functions_1.js  functions_3.js  functions_4.js  searchdata.js
CMake/BasexCpp/cmake/: BasexCpp-config.cmake.in
CMake/BasexCpp/docs/: libBasexCpp.in
CMake/BasexCpp/include/: BasexClient.h  BasexCpp.h  ClientUtils.h  QueryObject.h  ResponseObj.h
CMake/BasexCpp/include/BasexCpp/: export.h
CMake/BasexCpp/src/: Base.cpp  Base.h  BasexClient.cpp  BasexSocket.cpp  BasexSocket.h  ClientUtils.cpp  QueryObject.cpp  ResponseObj.cpp
CMake/Eclipse/libBasexCpp/: CMakeLists.txt  CMakePresets.json  libBasexCpp.doxyfile
CMake/Eclipse/libBasexCpp/Docs/html/: Base_8h_source.html  BasexClient_8h_source.html  BasexSocket_8h_source.html  ClientUtils_8h_source.html  QueryObject_8h_source.html  ResponseObj_8h_source.html  annotated.html  classBase-members.html  classBase.html  classBasexClient-members.html  classBasexClient.html  classBasexCpp_1_1Base-members.html  classBasexCpp_1_1Base.html  classBasexCpp_1_1BasexClient-members.html  classBasexCpp_1_1BasexClient.html  classBasexCpp_1_1QueryObject-members.html  classBasexCpp_1_1QueryObject.html  classBasexCpp_1_1ResponseObj-members.html  classBasexCpp_1_1ResponseObj.html  classQueryObject-members.html  classQueryObject.html  classResponseObj-members.html  classResponseObj.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html
CMake/Eclipse/libBasexCpp/Docs/html/search/: all_2.js  all_4.js  all_9.js  functions_0.js  functions_5.js  functions_6.js  pages_0.js  searchdata.js
CMake/Eclipse/libBasexCpp/Docs/latex/: Base_8h_source.tex  BasexClient_8h_source.tex  BasexSocket_8h_source.tex  ClientUtils_8h_source.tex  QueryObject_8h_source.tex  ResponseObj_8h_source.tex  annotated.tex  classBasexCpp_1_1Base.tex  classBasexCpp_1_1BasexClient.tex  classBasexCpp_1_1QueryObject.tex  classBasexCpp_1_1ResponseObj.tex  files.tex  hierarchy.tex  index.tex  refman.tex
CMake/Eclipse/libBasexCpp/src/: Base.cpp  Base.h  BasexClient.cpp  BasexClient.h  BasexSocket.cpp  BasexSocket.h  ClientUtils.cpp  ClientUtils.h  QueryObject.cpp  QueryObject.h  ResponseObj.cpp  ResponseObj.h
CMake/Eclipse/libBasexTest/: CMakeLists.txt
CMake/Eclipse/libBasexTest/include/: BasexCpp.h
CMake/Eclipse/libBasexTest/src/: libBasexTest.cpp
libBasexCpp/: CMakeLists.txt  libBasexTest.cpp
libBasexCpp/include/: libBasexCpp.h
libBasexCpp/src/: BasexClient.cpp  BasexClient.h  BasexSocket.cpp  BasexSocket.h  QueryObject.cpp  ResponseObj.cpp  ResponseObj.h
src/: Base.cpp  Base.h  BasexClient.h  BasexSocket.cpp  BasexSocket.h  ClientUtils.cpp  ClientUtils.h  QueryObject.h  ResponseObj.h
